--- a/node/Dockerfile
+++ b/node/Dockerfile
@@ -1,22 +1,16 @@
-FROM node:lts as builder
-
+FROM node:lts-alpine as builder
 WORKDIR /tmp/app
-
-COPY ../app/package*.json ./
-
+COPY ../app/package.json ./
 RUN npm install
 
-FROM node:lts
-
+FROM node:lts-alpine
 WORKDIR /usr/src/app
-#
 COPY --from=builder /tmp/app/node_modules ./node_modules
-#Gives permission to files just coppied
 COPY --chown=node:node . ./
+USER node
 
 EXPOSE 3000
 
 CMD [ "npm", "start" ]
 
-USER node
 
