--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -1,4 +1,14 @@
+#Composer
+FROM composer:1.9 as composer
+WORKDIR /app
+ADD ../app .
+RUN composer install
+
+#Final PHP
 FROM php:7.2-fpm
+LABEL mantainer="Sebastian Rodriguez // sebaror1@gmail.com"
+COPY --from=composer /usr/bin/composer /usr/bin/composer
+COPY --from=composer /app/vendor /var/www/html/vendor
 
 # RUN apt-get update && apt-get install -y\
 #     {dependencia cualqueira}
