--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -37,6 +37,7 @@ http {
     server_tokens off;
 
     server {
+
         listen 80;
         server_name wp.hola.com;
     
@@ -44,6 +45,7 @@ http {
         index index.php;
         
         location / {
+            root /var/www/html/public
             try_files $uri $uri/ /index.php?$args;
         }
 
@@ -60,7 +62,7 @@ http {
         }
 
         location ~ \.php {
-            root /var/www/html;
+            root /var/www/html/public;
             try_files $uri =404;
             #try_files $uri index.php$args;
 
