--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -36,45 +36,5 @@ http {
 
     server_tokens off;
 
-    server {
-
-        listen 80;
-        server_name wp.hola.com;
-    
-        root /var/www/html;
-        index index.php;
-        
-        location / {
-            root /var/www/html/public
-            try_files $uri $uri/ /index.php?$args;
-        }
-
-        location ~* \.(jpg|jpeg|gif|png|css|js|ico|xml)$ {
-            access_log        off;
-            log_not_found     off;
-            expires           360d;
-        }
-
-        location ~ /\. {
-            access_log off;
-            log_not_found off; 
-            deny all;
-        }
-
-        location ~ \.php {
-            root /var/www/html/public;
-            try_files $uri =404;
-            #try_files $uri index.php$args;
-
-            fastcgi_pass php-fpm:9000;
-            fastcgi_index index.php;
-            fastcgi_split_path_info ^(.+\.php)(/.+)$;
-            include fastcgi_params;
-            fastcgi_param   SCRIPT_FILENAME    $document_root$fastcgi_script_name;
-            fastcgi_param   SCRIPT_NAME        $fastcgi_script_name;
-            fastcgi_param   PATH_INFO          $fastcgi_path_info;
-            fastcgi_intercept_errors on;
-            
-        }
-    }
+    include ./conf.d/*.conf
 }
