--- a/config/nginx/conf.d/example.conf
+++ b/config/nginx/conf.d/example.conf
@@ -1,13 +1,14 @@
 server {
         listen 80;
-        server_name php.app;
+        server_name myapp.domain.com;
     
         root /var/www/html;
-        index index.php;
+        #index index.html;
         
         location / {
-            root /var/www/html/public
-            try_files $uri $uri/ /index.php?$args;
+            root /var/www/html/public;
+            index index.html;
+            # try_files $uri $uri/ /index.php?$args;
         }
 
         location ~* \.(jpg|jpeg|gif|png|css|js|ico|xml)$ {
@@ -21,18 +22,4 @@ server {
             log_not_found off; 
             deny all;
         }
-
-        location ~ \.php {
-            root /var/www/html/public;
-            try_files $uri =404;
-
-            fastcgi_pass php:9000;
-            fastcgi_index index.php;
-            fastcgi_split_path_info ^(.+\.php)(/.+)$;
-            include fastcgi_params;
-            fastcgi_param   SCRIPT_FILENAME    $document_root$fastcgi_script_name;
-            fastcgi_param   SCRIPT_NAME        $fastcgi_script_name;
-            fastcgi_param   PATH_INFO          $fastcgi_path_info;
-            fastcgi_intercept_errors on;
-        }
-    }
+}
