--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -25,7 +25,7 @@ http {
     gzip_vary on;
 
     access_log /dev/stdout;
-    more_set_headers 'Server: Option SpA';
+    more_set_headers 'Server: MyServer';
     more_clear_headers 'X-Powered-By';
 
     sendfile on;
