added test serverblock

--- a/config/nginx/conf.d/example.conf
+++ b/config/nginx/conf.d/example.conf
@@ -1,25 +1,12 @@
 server {
         listen 80;
-        server_name myapp.domain.com;
-    
-        root /var/www/html;
-        #index index.html;
+        server_name kaii.hola.com;
+
+        root /var/www/apps/test;
+        index index.html;
         
         location / {
-            root /var/www/html/public;
+            try_files $uri $uri/ =404;
             index index.html;
-            # try_files $uri $uri/ /index.php?$args;
-        }
-
-        location ~* \.(jpg|jpeg|gif|png|css|js|ico|xml)$ {
-            access_log        off;
-            log_not_found     off;
-            expires           360d;
-        }
-
-        location ~ /\. {
-            access_log off;
-            log_not_found off; 
-            deny all;
         }
 }
