--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -1,6 +1,6 @@
 load_module /usr/share/nginx/modules/ngx_http_headers_more_filter_module.so;
 
-user www-data;
+user 1001:1001;
 
 worker_processes auto;
 worker_rlimit_nofile 200000;
@@ -14,10 +14,8 @@ events {
     }
 
 http {
-
     include mime.types;
 
-    #Gzip
     gzip on;
     gzip_min_length 1100;
     gzip_buffers 4 32k;
